--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,9 @@
 
 :root {
     /* Colors */
-    --white: #fff;
     --light-gray: #f0f0f3;
+    --text-color: #808080;
+    --highlight-color: #e2e6e9;
     --light-color: #ffffff;
     --shadow-color: #cccccf;
 }
@@ -40,6 +41,7 @@ body {
     z-index: 0;
     background: var(--light-gray);
     border-radius: 30px;
+    border: 2px solid #f7f7f8;
     box-shadow: 20px 20px 40px var(--shadow-color), -20px -20px 40px var(--light-color);
 }
 
@@ -53,7 +55,7 @@ header p {
     font-family: 'Neue Plak W01', sans-serif;
     align-self: center;
     font-size: 25px;
-    color: #808080;
+    color: var(--text-color);
     margin: 0%;
 }
 
@@ -64,7 +66,7 @@ header .dropdown {
     width: 8.5em;
     height: 41.59px;
     z-index: 3;
-    background: #E2E6E9;
+    background: var(--highlight-color);
     border-radius: 50px;
     cursor: pointer;
 }
@@ -82,15 +84,16 @@ header .dropdown input {
     margin: 1.5em;
     padding: 0%;
     font-size: 16px;
-    color: #808080;
+    color: var(--text-color);
     cursor: pointer;
     border: none;
     outline: none;
     background: none;
+    -webkit-appearance: none;
 }
 
 header .dropdown i {
-    color: #808080;
+    color: var(--text-color);
     transition: all 500ms ease-in-out;
 }
 
@@ -106,6 +109,7 @@ header .dropdown i {
     padding: 0;
     background: var(--light-gray);
     border-radius: 30px;
+    border: 2px solid #f7f7f8;
     box-shadow: 20px 20px 40px var(--shadow-color), -10px -10px 20px var(--light-color);
     visibility: hidden;
     opacity: 0;
@@ -122,7 +126,7 @@ header .dropdown i {
     display: flex;
     position: relative;
     padding: 0.5em 1em;
-    color: #808080;
+    color: var(--text-color);
     list-style-type: none;
 }
 
@@ -137,12 +141,12 @@ header .dropdown i {
 }
 
 .options li:hover {
-    background-color: #E2E6E9;
+    background-color: var(--highlight-color);
 }
 
 .options li a {
     width: 100%;
-    color: #808080;
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -151,8 +155,8 @@ header .dark-mode {
     align-items: center;
     justify-content: center;
     width: 136px;
-    background-color: #E2E6E9;
-    color: #808080;
+    background-color: var(--highlight-color);
+    color: var(--text-color);
     border-radius: 50px;
     cursor: pointer;
 }
@@ -170,16 +174,17 @@ footer .author-info {
 
 footer div a {
     font-family: 'Neue Plak W01', sans-serif;
-    color: #808080;
+    color: var(--text-color);
     text-decoration: none;
 }
 
 footer div button {
-    font-family: 'Neue Plak W01', sans-serif;
-    color: #808080;
+    color: var(--text-color);
+    background: var(--light-gray);
     border: none;
     outline: none;
     cursor: pointer;
+    -webkit-appearance: none;
 }
 
 footer .tools {
